src/objects/peer__Verification__c.object
<CustomObject>
    <description>object which store email/sms verification info</description>
    <fields>
        <fullName>peer__Account__c</fullName>
        <description>peer account Id of the email</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Email_Verifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Verifications</relationshipLabel>
        <relationshipName>Verifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Creation_Time__c</fullName>
        <description>describes when was the token created</description>
        <label>Creation Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>peer__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>peer__Retry_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>no of  retries for a verification record</description>
        <label>Retry Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Sent_Details__c</fullName>
        <label>Sent Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>peer__Token__c</fullName>
        <description>A unique token stored to verify a email/sms</description>
        <label>Token</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Type__c</fullName>
        <description>type of the date being verified</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Verification_Ip_Address__c</fullName>
        <label>Verification Ip Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Verified_Time_Stamp__c</fullName>
        <description>describes when was the verification record verified</description>
        <label>Verified Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Verification</label>
    <listViews>
        <fullName>peer__All</fullName>
        <columns>peer__Verified__c</columns>
        <columns>peer__Account__c</columns>
        <columns>peer__Retry_Count__c</columns>
        <columns>peer__Token__c</columns>
        <columns>peer__Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>peer__Creation_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>